<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.sinf.simplescanner.activities.ListParticipantsActivity">
    <item
        android:id="@+id/item_share"
        app:showAsAction="ifRoom"
        android:title="@string/activity_list_participants_menu_share"
        android:icon="@drawable/ic_share_white_48dp"/>
    <item
        android:id="@+id/item_resend"
        android:title="@string/activity_list_participants_menu_resend" />
    <item
        android:id="@+id/item_download"
        android:title="@string/activity_list_participants_menu_download" />
    <item
        android:id="@+id/item_clear"
        android:title="@string/activity_list_participants_menu_clear" />
</menu>
